rearranged some classes